<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        app:srcCompat="@drawable/microsoftpnglogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/strEmail"
        android:textSize="20dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="@string/strtxtEmail"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/strContraseña"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/strtxtContraseña"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtIncorrecto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Email o contraseña incorrectos"
        android:textColor="#FF0000"
        android:textSize="18dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#00a1f1"
        android:gravity="center"
        android:text="@string/strbtnLogin" />

</LinearLayout>