<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-black"
      android:text="@string/strHomeLogo1"
      android:textAlignment="center"
      android:textSize="25sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:layout_constraintVertical_bias="0.242" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="312dp"
      android:layout_height="96dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.021"
      app:srcCompat="@drawable/microsoftpnglogo" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="385dp"
      android:layout_height="141dp"
      android:layout_marginTop="16dp"
      android:fontFamily="sans-serif-medium"
      android:text="@string/strHomeTexto"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textSize="22sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="204dp"
      android:layout_height="139dp"
      android:layout_marginTop="40dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.486"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:srcCompat="@drawable/windows31logo" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="223dp"
      android:layout_height="141dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3"
      app:layout_constraintVertical_bias="0.433"
      app:srcCompat="@drawable/windows2021logo" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-black"
      android:text="@string/strHomeLogo2"
      android:textAlignment="center"
      android:textSize="25sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.475"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView4"
      app:layout_constraintVertical_bias="0.248" />

</androidx.constraintlayout.widget.ConstraintLayout>